--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
     "concurrently": "^6.2.1",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
